opam-version: "1.2"
maintainer: "anders@fugmann.net"
authors: ["Rudi Grinberg"]
license: "MIT"
homepage: "https://github.com/issuu/ocaml-zmq"
dev-repo: "git@github.com/issuu/ocaml-zmq.git"
bug-reports: "https://github.com/issuu/ocaml-zmq/issues"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "zmq"
  "jbuilder" {build}
  "configurator" {build}
  "ppx_sexp_conv" {build}
  "async"
  "core"
  "sexplib"
]
