opam-version: "2.0"
maintainer: "anders@fugmann.net"
authors: ["Rudi Grinberg"]
license: "MIT"
homepage: "https://github.com/issuu/ocaml-zmq"
doc: "https://issuu.github.io/ocaml-zmq/"
dev-repo:
  "git+https://github.com/issuu/ocaml-zmq.git"
bug-reports: "https://github.com/issuu/ocaml-zmq/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.04.1"}
  "zmq" {= version}
  "dune"
  "async_unix" {>= "v0.11.0" & < "v0.13"}
  "async_kernel" {>= "v0.11.0" & < "v0.13"}
  "base" {>= "v0.11.0" & < "v0.13"}
  "ounit2" {with-test}
]
synopsis: "Async aware bindings to zmq"
