opam-version: "1.2"
maintainer: "Anders Fugmann <anders@fugmann.net>"
authors: ["Anders Fugmann <anders@fugmann.net>"]
license: "MIT"
homepage: "https://github.com/issuu/ocaml-zmq"
dev-repo: "git@github.com/issuu/ocaml-zmq.git"
bug-reports: "https://github.com/issuu/ocaml-zmq/issues"
doc: "https://issuu.github.io/ocaml-zmq/"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: ["dune" "runtest" "-p" name "-j" jobs]
depends: [
  "zmq" { >= "5.0.0" }
  "dune" {build}
  "lwt"
]
