opam-version: "1.2"
maintainer: "anders@fugmann.net"
authors: [ "Anders Fugmann" "Pedro Borges" "Peter Zotov" ]
license: "MIT"
homepage: "https://github.com/issuu/ocaml-zmq"
dev-repo: "git@github.com/issuu/ocaml-zmq.git"
bug-reports: "https://github.com/issuu/ocaml-zmq/issues"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: ["dune" "runtest" "-p" name "-j" jobs]
depends: [
  "conf-zmq"
  "dune" {build}
  "configurator" {build}
  "ounit" {test}
  "base-unix"
  "stdint" { >= "0.4.2" }
]
conflicts: [
  "ocaml-zmq"
]
