opam-version: "2.0"
maintainer: "anders@fugmann.net"
authors: [ "Anders Fugmann" "Pedro Borges" "Peter Zotov" ]
license: "MIT"
homepage: "https://github.com/issuu/ocaml-zmq"
dev-repo:
  "git+https://github.com/issuu/ocaml-zmq.git"
bug-reports: "https://github.com/issuu/ocaml-zmq/issues"
build: [
  ["dune" "subst" "-p" name] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.03"}
  "conf-zmq"
  "dune" {build}
  "configurator" {build & < "v0.13"}
  "ounit" {with-test}
  "base-unix"
  "stdint" {>= "0.4.2"}
]
conflicts: [
  "ocaml-zmq"
]
synopsis: "OCaml bindings for ZeroMQ 4.x"
description: """
This library contains basic bindings for zmq.
Lwt aware bindings to zmq are availble though package zmq-lwt
Async aware bindings to zmq are availble though package zmq-async

Api documentation can be found at https://issuu.github.io/ocaml-zmq"""
