(library
  (name zmq)
  (public_name zmq)
  (wrapped false)
  (c_names caml_zmq_stubs socket context fail poll msg)
  (c_flags ((:include c_flags.sexp) -Wall -Wextra -O2))
  (c_library_flags (:include c_library_flags.sexp))
  (libraries unix stdint bigarray))

(rule
  (targets c_flags.sexp c_library_flags.sexp)
  (deps (:discover config/discover.exe))
  (action (run %{discover})))
