(library
 (name zmq)
 (public_name zmq)
 (wrapped false)
 (foreign_stubs
  (language c)
  (names caml_zmq_stubs socket context fail poll msg)
  (flags
   (:include c_flags.sexp)
   -Wall
   -Wextra
   -O2))
 (c_library_flags
  (:include c_library_flags.sexp))
 (libraries unix bigarray))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (run %{discover})))
